# senior-thesis-on-skiplist

./: .gitignore  README.md
benchmarks/: CMakeLists.txt  main.cpp
benchmarks/google benchmark/: CMakeLists.txt  bench_runner.sh  main.cpp  run_demo_benchmark.sh
benchmarks/google benchmark/ctor/: empty_ctor.cpp  range_ctor.cpp
benchmarks/google benchmark/results/skiplist/: erase.txt  find.txt  insert.txt  range.txt  range_ctor_sorted.txt  range_ctor_unsorted.txt  range_ctor_unsorted_10_mln.txt
benchmarks/google benchmark/results/std_map/: erase.txt  find.txt  insert.txt  range_ctor_sorted.txt  range_ctor_unsorted.txt  range_ctor_unsorted_10_mln.txt
benchmarks/google benchmark/src/assignment/: copy_assignment.cpp  move_assignment.cpp
benchmarks/google benchmark/src/ctor/: copy_ctor.cpp  empty_ctor.cpp  move_ctor.cpp  range_ctor.cpp
benchmarks/google benchmark/src/erase/: clear.cpp  erase.cpp  erase_range.cpp
benchmarks/google benchmark/src/find/: find.cpp
benchmarks/google benchmark/src/insert/: insert.cpp
benchmarks/google benchmark/src/swap/: swap.cpp
benchmarks/google benchmark/tools/compare/: README.md
benchmarks/google benchmark/tools/plot/: README.md
benchmarks/google benchmark/utils/: bench_utils.cpp  bench_utils.h
benchmarks/manual/: CMakeLists.txt  bench_utils.cpp  bench_utils.h  manual.cpp  range_ctor_unsorted.cpp
benchmarks/reports/: Data Template.xltx  Graph Template.crtx
benchmarks/reports/erase/: erase graphs.xlsx  erase.xlsx
benchmarks/reports/find/: find graphs.xlsx  find.xlsx
benchmarks/reports/range_ctor/: graphs.xlsx  range_ctor.xlsx
skiplist/C/: skiplist.c
skiplist/C++/first try/include/: gcc_temp_utils.h
skiplist/C++/second try/: repeat_runner.sh
skiplist/C++/second try/tests/: at.cpp  catch2_test.cpp  emplace.cpp
skiplist/C++/v1/include/: skiplist.h  skiplist_iterator.h
skiplist/C++/v1/tests/: devtime_tests.cpp
skiplist/C++/v2/: CMakeLists.txt  repeat_runner.sh
skiplist/C++/v2/include/: container_utils.h  skiplist.h  skiplist_base.h  skiplist_iterator.h  skiplist_node.h  smap
skiplist/C++/v2/tests/: at.cpp  ctor.cpp  dtor.cpp  emplace.cpp  equal_range.cpp  erase.cpp  find.cpp  insert.cpp  lower_bound.cpp  manual_test.cpp  operator=.cpp  operator[].cpp  swap.cpp  test_utils.cpp  test_utils.h  upper_bound.cpp
skiplist/C++/v2/tests/catch2/: catch.hpp
skiplist/C++/v2/tests/with_std_alorithms/: std_algos.cpp
skiplist/Original Pugh/: copy_skiplist.c
skiplist/c/: log.txt  makefile  skiplist.c  skiplist.h  skiplist_test  skiplist_test.c
skiplist/c++/: .editorconfig  CMakeLists.txt  main.cpp  skiplist.cpp  skiplist.h  temp  temp.cpp
skiplist/c++/first_try/: CMakeLists.txt
skiplist/c++/first_try/include/: skiplist.h  skiplist_node.h
skiplist/c++/first_try/tests/: devtime_tests.cpp
skiplist/c++/include/: map_node.h  old_skiplist.h  old_skiplist_iterator.h  old_skiplist_node.h  skiplist.h
skiplist/c++/include2/: skiplist.h  skiplist_base.h  skiplist_node.h
skiplist/c++/second_try/: CMakeLists.txt  valgrind_runner.sh
skiplist/c++/second_try/include/: container_utils.h  skiplist.h  skiplist_base.h  skiplist_iterator.h  skiplist_node.h  smap
skiplist/c++/second_try/tests/: count.cpp  ctor.cpp  dtor.cpp  equal_range.cpp  erase.cpp  find.cpp  insert.cpp  operator=.cpp  operator[].cpp  swap.cpp  test_utils.h  upper_bound.cpp
skiplist/c++/second_try/tests/catch2/: catch.hpp
skiplist/c++/tests/: ctor.cpp  main.cpp  test_utils.h
skiplist/original c/: gdb-entitlement.xml  orig_skiplist  orig_skiplist.c  random_lvl.c  skiplist.c
skiplist/original c/orig_skiplist.dSYM/Contents/: Info.plist
skiplist/original c/orig_skiplist.dSYM/Contents/Resources/DWARF/: orig_skiplist
